--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -8,7 +8,7 @@
       content="Access to the best countries information."
     />
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewpor" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
 
     <link rel="icon" href="favicon.ico" />
